[metadata]
name = aifdb-crawler
version = 0.0.1
author = m0re4u
author_email = m.t.van.der.meer@liacs.leidenuniv.nl
description = Package for crawling AIFdb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m0re4u/aifdb-crawler
project_urls =
    Bug Tracker = https://github.com/m0re4u/aifdb-crawler/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where =